// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test case arrays 1`] = `
"INSERT INTO metaschema_public.field (
  id,
  schemas
) VALUES
(
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  '{a,b}'
);"
`;

exports[`test case image/attachment 1`] = `
"INSERT INTO metaschema_public.field (
  id,
  name,
  image,
  upload
) VALUES
(
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  'name here',
  '{"url":"http://path/to/image.jpg"}',
  '{"url":"http://path/to/image.jpg"}'
);"
`;

exports[`test case jsonb/json 1`] = `
"INSERT INTO metaschema_public.field (
  id,
  name,
  data
) VALUES
(
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  'name here',
  '{"a":1}'
);"
`;

exports[`test case test case 1`] = `Promise {}`;

exports[`test case test case parser 1`] = `
"INSERT INTO metaschema_public.field (
  id,
  database_id,
  table_id,
  name,
  description
) VALUES
(
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  '450e3b3b-b68d-4abc-990c-65cb8a1dcdb4',
  'name here',
  'description'
);"
`;
